# Market-volatility-forecasting-with-AR-and-GARCH

./: LICENSE  README.md  pyproject.toml
data/: README.md
notebooks/: volatility_forecasting_walkthrough.ipynb
notebooks/archive/: berkeley_original_ps6_solution.ipynb  original_volatility_walkthrough.ipynb
reports/: summary.md
scripts/: run_all.py
src/vol_forecast/: __init__.py  data.py  evaluate.py  modeling.py  plotting.py
tests/: test_smoke.py
